with look and feel changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site
-name: "Mediumish"
-title: "Mediumish"
-description: "Jekyll template, Medium styled, free for bloggers."
+name: "'UnRead' Gems | 'చదవని'ముత్యాలు"
+title: "'UnRead' Gems | 'చదవని'ముత్యాలు"
+description: "Chance to redeem yourself by reading through these super long WhatsApp forwards"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /uncle-tales
-# google_analytics: 'UA-46278016-1'
+google_analytics: 'UA-111600714-1'
 # disqus: 'demowebsite'
 # mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
@@ -15,21 +15,29 @@ permalink: /:title/
 authors:
   sal:
     name: Sal
-    display_name: Sal
+    display_name: తోట రాముడు
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John    
+    #email: wowthemesnet@gmail.com
+    #web: https://www.wowthemes.net
+    #twitter: https://twitter.com/wowthemesnet
+    description: "రంగు పడుద్ది"
+  chanti:
+    name: chanti
+    display_name: చంటిగాడు 
+    gravatar: e56154546cf4be74e393c62d1ae9f9d4
+    #email: wowthemesnet@gmail.com
+    #web: https://www.wowthemes.net
+    #twitter: https://twitter.com/wowthemesnet
+    description: "చంటిగాడు local"
+  SP:
+    name: SP
+    display_name: Satya Pavan    
     avatar: 'assets/images/avatar.png'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
+    #email: wowthemesnet@gmail.com
+    web: https://satyapavan.github.io/
+    #twitter: https://twitter.com/wowthemesnet
+    description: "I built the internet"
 
 # Plugins
 plugins:
@@ -48,7 +56,7 @@ jekyll-archives:
     category: '/category/:name/'
     
 # Pagination 
-paginate: 6
+paginate: 9
 paginate_path: /page:num/
     
 # Other
@@ -67,6 +75,6 @@ adsense: "disabled"
 # adsense-data-ad-slot: "1363087678"
 
 # Lazy Images ("enabled" or "disabled")
-lazyimages: "disabled"
+lazyimages: "enabled"
 
 exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
