changed the subtitle

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "'UnRead' Gems | 'చదవని'ముత్యాలు"
 title: "'UnRead' Gems | 'చదవని'ముత్యాలు"
-description: "Chance to redeem yourself by reading through these super long WhatsApp forwards"
+description: "Your quintessential WhatsApp Uncle"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /uncle-tales
